# study-fastapi

./: .gitignore  README.md  pyproject.toml
chapter00/: .env  test.http
chapter01/: main.py
chapter02/: README.md  main.py  test.http
chapter03/: book.yaml  main.py
chapter04/: config.py  main.py  test.http
chapter04/src/book/: __init__.py  data.py  models.py  routes.py  schemas.py  service.py
chapter04/src/db/: main.py
chapter05/: http-client.env.json  test.http
chapter05/migrations/: env.py
chapter05/src/auth/: models.py
chapter05/src/db/: main.py
chapter06/: .env  http-client.env.json  main.py  test.http
chapter06/migrations/versions/: 7d1a971fe6ed_password.py  c74dcbef33fa_first.py
chapter06/src/: config.py
chapter06/src/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
chapter06/src/db/: main.py
test/: a.py  database.db
